ChangeLog

20041904
	-src/utility.c
	
	Simplify some basic conversions.
	
	Juan Carlos Remis 

20041704
	-examples/sun.c
	
	Fixed typo in example code
	
	Liam Girdwood

20041804
	-src/elliptic_motion.c
	-src/parabolic_motion.c
	
	Change RST to use IAU longitudes.
	
	Liam Girdwood

20041704
	-src/rise_set.c
	
	Change RST to use IAU longitudes.
	
	Liam Girdwood

20041004
	-src/rise_set.c

	Fixed bug with correct side of
	angles passed to ln_interpolate3
	in ln_get_body_rst_horizont

	Petr Kubanek

20041003
	-src/aberration.c
	-src/nutation.c
	-src/transform.c
	-src/precession.c
	-src/utility.c
	-lntest/test.c
	
	Used long doubles internally.
	Fixed bug in ln_dms negative bit.
	
	Liam Girdwood

20040703
	-src/*.c
	-src/libnova/*.h
	-lntest/*.c
	-examples/*.c
	
	Created new API with ln_ prefix.
	All headers are now in src/libnova/ and are installed in 
	$(prefix)/libnova/
	
	Liam Girdwood, Peter Williams

20042001
	-src/transform.c
	-src/libnova.h
	-lntest/test.c
	
	Changed from longitude measurement from Meeus positively westwards to the
	IAU's positively eastwards.

	Liam Girdwood, Guillermo Ballester Valor


20033008

	-src/julian_day.c
	
	Added Win32 timezone functionality
	
	Liam Girdwood, Pablo Martikian

	-src/libnova.h
	-src/rise_set.c
	-src/elliptic_motion.c
	
	Removed inlines due to build problems on some compilers
	
	Pablo Martikian

	-src/transform.c
	
	Removed unintentional debug from CVS
	
	Liam Girdwood
	
	-src/libnova.c
	
	Added #define VERSION for building on Windows
	
	Pablo Martikian

20032508
	-src/*.c *.h
	
	Corrected GNU licence to use LGPL 
	
	Liam Girdwood

20032403
	-src/julian_day.c
	
	Fixed local to UT transformations
	
	Liam Girdwood

20032003
	-src/misc.c
	
	Mac OSX does not have malloc.h as it's included in stdlib.h

	Paul Ray

	-examples/asteroid.c
	-examples/Makefile.am
	
	added asteroid example code based on MPCORB data for Pallas.

	-src/elliptic motion.c
	
	removed an unintentional change.

	-src/libnova.h
	-src/elliptic_motion.c
	