@@ -1,4 +1,4 @@
-/* $Id: utility.c,v 1.4 2004-04-19 20:30:55 l_girdwood Exp $
+/* $Id: utility.c,v 1.5 2004-05-10 18:55:50 l_girdwood Exp $
 **
 * Copyright (C) 1999, 2000 Juan Carlos Remis
 * Copyright (C) 2002 Liam Girdwood
@@ -131,6 +131,26 @@ void ln_deg_to_hms (double degrees, struct ln_hms * hms)
 
     /* divide remainder by 60 to get seconds */
     hms->seconds = dtemp * 60.0;
+	
+	/* handle overflows */
+	if (hms->seconds < 60.0 - 1e-9)
+		return;
+	else {
+		hms->seconds = 0;
+		hms->minutes ++;
+	}
+
+	if (hms->minutes < 60.0)
+		return; 
+	else {
+		hms->minutes = 0;
+		hms->hours++;
+	}
+
+	if (hms->hours < 24)
+		return;
+	else 
+		hms->hours -=24;
 }
 
 /* convert radians to hh:mm:ss */
@@ -152,6 +172,26 @@ void ln_rad_to_hms (double radians, struct ln_hms * hms)
 
     /* divide remainder by 60 to get seconds */
     hms->seconds = dtemp * 60.0;
+	
+	/* handle overflows */
+	if (hms->seconds < 60.0 - 1e-9)
+		return;
+	else {
+		hms->seconds = 0;
+		hms->minutes ++;
+	}
+
+	if (hms->minutes < 60.0)
+		return; 
+	else {
+		hms->minutes = 0;
+		hms->hours++;
+	}
+
+	if (hms->hours < 24)
+		return;
+	else 
+		hms->hours -=24;
 }
 
 
@@ -210,6 +250,26 @@ void ln_deg_to_dms (double degrees, struct ln_dms * dms)
     
     /* divide remainder by 60 to get seconds */
     dms->seconds = dtemp * 60;
+
+	/* handle overflows */
+	if (dms->seconds < 60.0 - 1e-9)
+		return;
+	else {
+		dms->seconds = 0;
+		dms->minutes ++;
+	}
+
+	if (dms->minutes < 60.0)
+		return; 
+	else {
+		dms->minutes = 0;
+		dms->degrees++;
+	}
+
+	if (dms->degrees < 360)
+		return;
+	else 
+		dms->degrees -=360;
 }
 
 /* convert radians to dms */
@@ -236,6 +296,26 @@ void ln_rad_to_dms (double radians, struct ln_dms * dms)
 
     /* divide remainder by 60 to get seconds */
     dms->seconds = dtemp * 60;
+	
+	/* handle overflows */
+	if (dms->seconds < 60.0 - 1e-9)
+		return;
+	else {
+		dms->seconds = 0;
+		dms->minutes ++;
+	}
+
+	if (dms->minutes < 60.0)
+		return; 
+	else {
+		dms->minutes = 0;
+		dms->degrees++;
+	}
+
+	if (dms->degrees < 360)
+		return;
+	else 
+		dms->degrees -=360;
 }
 
 
